5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1670_2975.log
== SUBMITION (2019-04-16 18:23:57) 
-- CODE:
qdsuc=int(input("Quantidae de suco:"))
qdsal=int(input('Qual a quantidade de salgado:'))
vlr_disponivel=float(input("Digite o valor disponivel:"))
vlr_total=qdsuc*qdsal
print(round(vlr_total,2))
if(vlr_disponoivel>=vlr_total):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.169649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2975/main.py", line 6, in <module>
    if(vlr_disponoivel>=vlr_total):
NameError: name 'vlr_disponoivel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:02) 
-- CODE:
qdsuc=int(input("Quantidae de suco:"))
qdsal=int(input('Qual a quantidade de salgado:'))
vlr_disponivel=float(input("Digite o valor disponivel:"))
vlr_total=qdsuc*qdsal
print(round(vlr_total,2))
if(vlr_disponoivel>=vlr_total):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(vlr_disponoivel>=vlr_total):
NameError: name 'vlr_disponoivel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:37) 
-- CODE:
qdsuc=int(input("quantidae de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
vlr_total=qdsuc*qdsal
print(round(vlr_total,2))
if(vlr_disponoivel>=vlr_total):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(vlr_disponoivel>=vlr_total):
NameError: name 'vlr_disponoivel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:28:29) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if(vlr_disponoivel>=vlr_total):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.179749
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2975/main.py", line 8, in <module>
    if(vlr_disponoivel>=vlr_total):
NameError: name 'vlr_disponoivel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:30) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if(vlr_disponoivel>=vlr_total):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(vlr_disponoivel>=vlr_total):
NameError: name 'vlr_disponoivel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:59) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if(vlr_disponoivel>="vlr_total"):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(vlr_disponoivel>="vlr_total"):
NameError: name 'vlr_disponoivel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:29:50) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if(vlr_disponoivel>vlr_total):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.134649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2975/main.py", line 8, in <module>
    if(vlr_disponoivel>vlr_total):
NameError: name 'vlr_disponoivel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:20) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if("vlr_disponoivel">="vlr_total"):
	print("sim")
else:
	print("nao")
-- OUTPUT:
13.0
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:30:30) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if("vlr_disponoivel">="vlr_total"):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.240316
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
nao
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
nao
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:35) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if("vlr_disponoivel">="vlr_total"):
	print("sim")
else:
	print("nao")
-- OUTPUT:
13.0
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:31:03) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
vlr_disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
vlr_total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if("vlr_disponivel">="vlr_total"):
	print("sim")
else:
	print("nao")
-- OUTPUT:
13.0
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:31:44) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if("disponivel">="total"):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(vlr_total,2))
NameError: name 'vlr_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:32:00) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(vlr_total,2))
if("disponivel">="total"):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(vlr_total,2))
NameError: name 'vlr_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:32:26) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if("disponivel">="total"):
	print("sim")
else:
	print("nao")
-- OUTPUT:
13.0
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:32:56) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if("disponivel"<="total"):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.149692
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
sim
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:32:58) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if("disponivel"<="total"):
	print("sim")
else:
	print("nao")
-- OUTPUT:
13.0
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:33:12) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if("disponivel"<="total"):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.220228
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
sim
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:14) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if("disponivel"<="total"):
	print("sim")
else:
	print("nao")
-- OUTPUT:
13.0
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:34:11) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if("disponivel"<="total"):
	print("Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.113972
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
Sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
Sim
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:16) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if("disponivel"<="total"):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:35:23) 
-- CODE:
qdsuc=int(input("quantidade de suco:"))
qdsal=int(input( "quantidade de salgado:"))
disponivel=float(input("Digite o valor disponivel:"))
suco=3
salgado=3.5
total=(qdsuc*suco)+(qdsal*salgado)
print(round(total,2))
if(disponivel>total):
	print("Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.18601
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
Sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
Nao
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
